[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Card/intro/expo/card1.png" type="Texture" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Assets/Font/Roboto-Black.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Script/fight_card.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 33
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
extra_spacing_top = 25
font_data = ExtResource( 3 )

[node name="fight_card_control" type="Control"]
margin_right = 359.0
margin_bottom = 359.0
script = ExtResource( 4 )

[node name="back2" type="Panel" parent="."]
margin_right = 337.0
margin_bottom = 337.0
rect_rotation = -3.3
rect_pivot_offset = Vector2( 179, 179 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="back2"]
position = Vector2( 179, 179 )
frames = SubResource( 14 )

[node name="back3" type="Panel" parent="."]
visible = false
margin_right = 337.0
margin_bottom = 337.0
rect_pivot_offset = Vector2( 179, 179 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="back3"]
position = Vector2( 179, 179 )
frames = SubResource( 14 )

[node name="back" type="Panel" parent="."]
visible = false
margin_right = 337.0
margin_bottom = 337.0
rect_pivot_offset = Vector2( 179, 179 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="back"]
position = Vector2( 179, 179 )
scale = Vector2( 1.4, 1.4 )
frames = SubResource( 3 )

[node name="card" type="Panel" parent="."]
margin_right = 337.0
margin_bottom = 337.0
rect_pivot_offset = Vector2( 179, 179 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="card"]
position = Vector2( 168, 168 )
scale = Vector2( 1.3, 1.3 )
frames = SubResource( 1 )

[node name="hint_bg" type="ColorRect" parent="card/AnimatedSprite"]
visible = false
modulate = Color( 1, 1, 1, 0.635294 )
margin_left = -128.0
margin_top = -43.7143
margin_right = 129.0
margin_bottom = 41.2857
color = Color( 0, 0, 0, 1 )

[node name="hint_up" type="RichTextLabel" parent="card/AnimatedSprite/hint_bg"]
visible = false
margin_right = 645.0
margin_bottom = 207.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true

[node name="hint_right" type="RichTextLabel" parent="card/AnimatedSprite/hint_bg"]
visible = false
margin_right = 645.0
margin_bottom = 207.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true

[node name="hint_down" type="RichTextLabel" parent="card/AnimatedSprite/hint_bg"]
visible = false
margin_right = 645.0
margin_bottom = 207.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true

[node name="hint_left" type="RichTextLabel" parent="card/AnimatedSprite/hint_bg"]
visible = false
margin_right = 645.0
margin_bottom = 207.0
rect_scale = Vector2( 0.4, 0.4 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
